<resources>
    <string name="app_name">Careeh</string>
    <string name="map_api_key">AIzaSyC1T6UNZaiF5SbpU3YlBOZEuGrYBRPu1mQ</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="careeh_logo">Careeh Logo</string>
    <string name="logistics_solutions_text">Comprehensive logistics solutions for you!</string>
    <string name="picture_careeh">Picture Careeh</string>
    <string name="reliable_care_text">We care limitless that you can rely on</string>
    <string name="start_using">Start using</string>
    <string name="skip">Skip</string>
    <string name="picture_deliver">Picture Deliver</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account_login">Already have an account? <b>Login</b></string>
    <string name="select_account">Select Account</string>
    <string name="select_account_text">Select your account type</string>
    <string name="delivery_type_text">What type of delivery do you need?</string>
    <string name="individual_logo">Individual Logo</string>
    <string name="individual">Individual</string>
    <string name="individual_des">Lorem Ipsum is simply dummy text of the printing</string>
    <string name="business_logo">Business Logo</string>
    <string name="business">Business</string>
    <string name="business_text">Lorem Ipsum is simply dummy text of the printing</string>
    <string name="register_personal_account">Register your Personal account</string>
    <string name="enter_information_below">Enter your information below</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="long_established_fact">It is a long established fact that a reader will be distracted by the readable</string>
    <string name="create_business_account">Create your business account</string>
    <string name="enter_business_info_below">Enter your business information below</string>
    <string name="full_name">Full Name</string>
    <string name="company_name">Company name</string>
    <string name="industry">Industry</string>
    <string name="welcome_back">Welcome Back!!!</string>
    <string name="great_to_have_you_again">Great to have you again</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="or_login_with">Or Login with</string>
    <string name="no_account_prompt">Don’t have any account? <b>Signup</b></string>
    <string name="reset_password_phone_prompt">Enter your phone number to reset your password</string>
    <string name="continue_text">Continue</string>
    <string name="otp_notification">You will receive an OTP</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="enter_otp_from_message">Enter the OTP send to you by message</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_confirm_new_password"><![CDATA[Reset & confirm your new password]]></string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cashback">Cashback</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="my_orders">My Orders</string>
    <string name="notification">Notification</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="dummy_name">Mesut Ozil</string>
    <string name="wallet">Wallet</string>
    <string name="my_drivers">My drivers</string>
    <string name="help_center">Help Center</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="your_location_title">Your Location</string>
    <string name="dummy_location">Bashundhara R/A</string>
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="pick_up_time">Pick-up time</string>
    <string name="available_vehicle_title">Available Vehicle</string>
    <string name="fries_manu_icon">Fries Manu Icon</string>
    <string name="bell_notification">Bell Notification</string>
    <string name="suggestions_title">Suggestions</string>
    <string name="vehicle_icon">Vehicle Icon</string>
    <string name="parcel_title">Parcel</string>
    <string name="courier_title">Courier</string>
    <string name="shifting_title">Shifting</string>
    <string name="storage_title">Storage</string>
    <string name="truck">Truck</string>
    <string name="car">Car</string>
    <string name="user_menu">User Menu</string>
    <string name="schedule_text">Schedule</string>
    <string name="choose_date_title">Choose Date</string>
    <string name="choose_time_title">Choose Time</string>
    <string name="add_stop">Add Stop</string>
    <string name="bike">Bike</string>
    <string name="pick_up_location_text">Pick-up Location</string>
    <string name="drop_off_location_text">Drop-off Location</string>
    <string name="close">Close</string>
    <string name="trans_search_location">Transition Search Location</string>
    <string name="back_button_text">Back Button</string>
    <string name="location_icon">Location Icon</string>
    <string name="current_location">Current Location</string>
    <string name="dummy_current_location">Banani, Dhaka 1230</string>
    <string name="title_activity_confirm_location">ConfirmLocationActivity</string>
    <string name="where_to_text">Where to…</string>
    <string name="update_photo">Update Photo</string>
    <string name="personal_information_text">Personal Information</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="dummy_number">+8801755667788</string>
    <string name="dummy_email">mesut.ozil@gmail.com</string>
    <string name="location">Location</string>
    <string name="division">Division</string>
    <string name="dhaka">Dhaka</string>
    <string name="district">District</string>
    <string name="change_password_text">Change Password</string>
    <string name="confirm_text">Confirm</string>
    <string name="turn_on_location">Please turn on your location.</string>
    <string name="location_permission_title">Location Permission</string>
    <string name="location_permission_text">Location permission is required to get current location. Press the \"Next\" button to continue the grant location permission.</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="permission_granted_text">Permission Granted</string>
    <string name="permission_denied_text">Permission Denied</string>
    <string name="location_update_failed_text">Location settings update canceled or failed</string>
    <string name="pending_title">Pending</string>
    <string name="completed_title">Completed</string>
    <string name="cancelled_title">Cancelled</string>
    <string name="ep_box_icon">EP Box Icon</string>
    <string name="dummy_order_id">Order ID#01</string>
    <string name="gen_order_id">Order ID#%02d</string>
    <string name="dummy_date">Date: 24/03/2023</string>
    <string name="dummy_pick_up_location">Bashundhara</string>
    <string name="dummy_drop_off_location">Malibagh</string>
    <string name="order_details_title">Order Details</string>
    <string name="order_status_warehouse">In Warehouse</string>
    <string name="tracking_package_title">Tracking Package</string>
    <string name="_30_jan_2023_title">30 jan, 2023</string>
    <string name="delivered_title">Delivered</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>
    <string name="back">Back</string>
    <string name="notification_title">Notification</string>
    <string name="promotion_title">Promotion</string>
    <string name="dummy_notification_msg">You have successfully enrolled to</string>
    <string name="dummy_notification_title">English Basic to Advance</string>
    <string name="dummy_notification_date">June 06, 2023</string>
    <string name="dummy_notification_time">12:52 PM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_promotion">10% Discount on your next delivery till june 10, 2023.</string>
    <string name="firework_icon">Firework Icon</string>

</resources>