<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.ProfileActivity">

    <!-- App bar -->
    <include
        android:id="@+id/appbar"
        layout="@layout/appbar_logo_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/profile_img_size"
                    android:layout_height="@dimen/profile_img_size"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dummy_profile"
                    app:shapeAppearanceOverlay="@style/CircularImageView" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:contentDescription="@string/update_photo"
                    android:src="@drawable/fill_photo_camera" />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_30dp"
                android:text="@string/personal_information_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <!--
            Based on UI design I have implemented TextInputEditText,
            and focusable is false, inputType is none... It may be change
            for next time.
            -->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@string/dummy_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/mobile_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@string/dummy_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/email_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@string/dummy_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@string/dummy_location" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutDropdownStyle"
                    android:layout_weight="1"
                    android:hint="@string/division">

                    <AutoCompleteTextView
                        android:id="@+id/auto_com_division"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="none"
                        android:labelFor="@+id/auto_com_division" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutDropdownStyle"
                    android:layout_weight="1"
                    android:hint="@string/district">

                    <AutoCompleteTextView
                        android:id="@+id/auto_com_district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="none"
                        android:labelFor="@+id/auto_com_district" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_30dp"
                android:text="@string/change_password_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/new_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/confirm_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_30dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_30dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:text="@string/confirm_text"
                app:shapeAppearanceOverlay="@style/BorderRadiusImageView" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>