<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_careeh_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:contentDescription="@string/careeh_logo"
            android:src="@drawable/careeh_logo_180" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2dp"
            android:text="@string/welcome_back"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2dp"
            android:text="@string/great_to_have_you_again" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="@dimen/_25dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:hint="@string/phone_number"
            app:startIconDrawable="@drawable/baseline_phone_android_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/outline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginEnd="@dimen/_30dp"
            android:paddingTop="@dimen/_10dp"
            android:paddingBottom="@dimen/_10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_30dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:text="@string/log_in" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:padding="@dimen/_5dp"
            android:text="@string/or_login_with"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginEnd="@dimen/_30dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_5dp"
            android:paddingBottom="@dimen/_5dp">

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/icon_google"
                android:padding="@dimen/_10dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/icon_facebook"
                android:padding="@dimen/_10dp"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:padding="@dimen/_5dp"
            android:text="@string/no_account_prompt"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>